# papercut.io

./: .gitignore  LICENSE.md  README.md  index.html  package-lock.json  package.json  tauri-env.sh  tts-pronunciation-test.html  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  ios-init.yml  release.yml
RELEASE_NOTES/: v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md  v1.4.0.md  v1.4.1.md  v1.4.2.md
docs/: apple-distribution.md  epub-implementation-plan.md  kokoro-tts.md  offline-translation.md  user-document-search.md
public/documents/: architecture.html  getting-started.html  search-tips.html
scripts/: build-android.js  build-desktop.js  build-ios.js  check-ios-device-build.js  copy-sherpa-linux-libs.js  copy-sherpa-macos-libs.js  prepare-local-jdk.js  prepare-sherpa-android-libs.js  prepare-sherpa-ios-libs.js  verify-appimage-media.js  verify-macos-bundle-libs.js
scripts/lib/: archive.js  constants.js  download.js  paths.js  process.js  tauri.js
scripts/lib/android/: build-env.js  constants.js  jdk.js  sherpa.js
scripts/lib/desktop/: linux.js  macos.js  platform.js  windows.js
scripts/lib/ios/: constants.js  sherpa.js
scripts/lib/linux/: constants.js  sherpa.js
scripts/lib/macos/: constants.js  sherpa.js
site/: index.html  styles.css
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: document_uploads.rs  lib.rs
src-tauri/src/document_uploads/: commands.rs  mod.rs  organization.rs  parsed.rs  pipeline.rs  search.rs  storage.rs  store.rs  types.rs
src-tauri/src/document_uploads/epub/: assets.rs  mod.rs  paths.rs  render.rs  rewrite.rs
src-tauri/src/document_uploads/html/: decode.rs  mod.rs  parser.rs  sanitize.rs  util.rs
src-tauri/src/native_tts/: commands.rs  mod.rs  platform.rs  state.rs  stub.rs  types.rs
src-tauri/src/native_tts/engine/: cache.rs  config.rs  file_commit.rs  mod.rs  model.rs  models.rs  paths.rs  playback.rs  preprocess.rs  save.rs  synth.rs
src-tauri/src/native_tts/engine/bundle/: export.rs  import.rs  manage.rs  mod.rs
src-tauri/src/translation/: cache.rs  capabilities.rs  commands.rs  config.rs  ctranslate2.rs  engine.rs  hash.rs  html.rs  inline_markup.rs  job.rs  mod.rs  model_install.rs  model_store.rs  models.rs  quality.rs  render.rs  runner.rs  segment.rs  source.rs  state.rs  storage.rs  stub.rs  types.rs
src-tauri/tts/: model-manifest.json
src/components/AppDialog/: AppDialog.css  AppDialog.tsx
src/components/DocumentList/: DocumentList.tsx
src/components/DocumentViewer/: DocumentViewer.tsx  linkUtils.ts
src/components/DocumentsPanel/: DocumentsPanel.tsx
src/components/ExternalLinkPrompt/: ExternalLinkPrompt.css  ExternalLinkPrompt.tsx
src/components/FindBar/: FindBar.tsx
src/components/Panel/: Panel.tsx
src/components/ReaderSettings/: ReaderSettings.css  ReaderSettings.tsx  useReaderSettings.ts
src/components/ScrollTopButton/: ScrollTopButton.tsx
src/components/SearchBar/: SearchBar.tsx
src/components/SearchResults/: SearchResults.tsx
src/components/SearchScope/: SearchScope.tsx
src/components/TabNav/: TabNav.tsx
src/components/TextInputDialog/: TextInputDialog.css  TextInputDialog.tsx
src/hooks/: useDocumentFilters.ts  useFindInPage.ts  usePagefind.ts  useSearch.ts  useTheme.ts
src/tts/: AudiobookDownloadsPanel.tsx  format.ts  models.ts  types.ts
src/types/: search.ts
src/uploads/: DocumentUploads.ts
src/utils/: debugFlags.ts  documentUtils.ts  formatUtils.ts  phraseSearch.ts  textUtils.ts
src/viewers/: EpubViewer.tsx  HtmlViewer.tsx  PdfViewer.tsx  registry.ts  types.ts
(+30 files in other folders)
