[package]
name = "app"
version = "1.0.0"
description = "Search, Read, & Listen Offline"
authors = ["Muhannad"]
license = "MIT"
repository = "https://github.com/muhannadnouri/papercut.io"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[features]
default = []
native-tts = ["native-tts-static"]
native-tts-core = ["dep:base64", "dep:bzip2", "dep:reqwest", "dep:sha2", "dep:tar", "dep:sherpa-onnx"]
native-tts-static = ["native-tts-core", "sherpa-onnx/static"]
native-tts-shared = ["native-tts-core", "sherpa-onnx/shared"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-native-audio = "=1.0.5"
base64 = { version = "0.22", optional = true }
sha2 = { version = "0.10", optional = true }
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.4", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
sherpa-onnx = { version = "1.13.2", optional = true, default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
