[package]
name = "app"
version = "1.1.0"
description = "Search, Read, & Listen Offline"
authors = ["Muhannad"]
license = "MIT"
repository = "https://github.com/muhannadnouri/papercut.io"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[features]
default = []
native-tts = ["native-tts-static"]
native-tts-core = ["dep:bzip2", "dep:num2words", "dep:reqwest", "dep:sha2", "dep:tar", "dep:sherpa-onnx"]
native-text-preprocessing = ["dep:libtashkeel_base", "dep:ort", "dep:ort-sys"]
native-tts-static = ["native-tts-core", "sherpa-onnx/static"]
native-tts-shared = ["native-tts-core", "native-text-preprocessing", "sherpa-onnx/shared"]
native-translation = ["dep:reqwest", "dep:sha2"]
native-translation-ctranslate2 = ["native-translation"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-native-audio = "=1.0.5"
base64 = "0.22"
num2words = { version = "1.2", optional = true }
sha2 = { version = "0.10", optional = true }
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.4", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
sherpa-onnx = { version = "1.13.2", optional = true, default-features = false }
libtashkeel_base = { version = "=1.5.0", optional = true, default-features = false, features = ["ort-dylib"] }
ort = { version = "=2.0.0-rc.1", optional = true, default-features = false, features = ["load-dynamic", "ndarray"] }
ort-sys = { version = "=2.0.0-rc.1", optional = true, default-features = false, features = ["load-dynamic"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ammonia = "3.3"
encoding_rs = "0.8"
roxmltree = "0.20"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
percent-encoding = "2.3"
kuchikiki = "=0.8.8-speedreader"
